--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html  data-theme="dark"><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/video-highlight-tool-vue/assets/entry.Bh51_9mr.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/video-highlight-tool-vue/assets/DNe3Be1Y.js">
-<script type="module" src="/video-highlight-tool-vue/assets/DNe3Be1Y.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754229914887,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiBase:"/api",appVersion:"1.0.0"},app:{baseURL:"/video-highlight-tool-vue/",buildId:"b230f2de-112c-49e1-98ae-e2940051c057",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="/video-highlight-tool/assets/entry.Bh51_9mr.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/video-highlight-tool/assets/DNe3Be1Y.js">
+<script type="module" src="/video-highlight-tool/assets/DNe3Be1Y.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754231829098,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiBase:"/api",appVersion:"1.0.0"},app:{baseURL:"/video-highlight-tool/",buildId:"4e2f5116-4721-491d-b4ee-322bca422098",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
