--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html  data-theme="dark"><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/video-highlight-tool/assets/entry.Bh51_9mr.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/video-highlight-tool/assets/BC3ucApc.js">
-<script type="module" src="/video-highlight-tool/assets/BC3ucApc.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754233086752,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{appVersion:"1.0.0"},app:{baseURL:"/video-highlight-tool/",buildId:"e30204fd-d8f2-4849-9cd3-e925f5beb69a",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
+<link rel="stylesheet" href="/video-highlight-tool/assets/entry.B1QOnkWq.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/video-highlight-tool/assets/BZ_IF-cD.js">
+<script type="module" src="/video-highlight-tool/assets/BZ_IF-cD.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1754238180193,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{appVersion:"1.0.0"},app:{baseURL:"/video-highlight-tool/",buildId:"ca852c75-2e0e-446f-a19a-79d3baa4c1b9",buildAssetsDir:"assets",cdnURL:""}}</script></body></html>
